--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- SUMMARY -->
 				<div class="block">
 					<h2>Summary</h2>
-					<p>I'm Mohamed, Senior Software Engineer with many years of experience in software development. I have outstanding experience building software solutions that are both highly available and scalable, and I have proven my skills in multiple work environments, from startups to large multinational organisations.</p>
+					<p>I am Mohamed, an expierienced Senior Software Engineer with extensive experience in software development, particularly within the Java ecosystem. Over the years, I have demonstrated exceptional proficiency in constructing highly available and scalable software solutions. My expertise spans various work environments, ranging from dynamic startups to expansive multinational organizations. Throughout my career, I have consistently showcased my skills in delivering robust and innovative software solutions.</p>
 					<p>I've recently developed a strong interest in data and machine learning, which has motivated me to study more about these topics and look for new possibilities that would expose me to cutting-edge technology and business challenges.</p>
 					<p>On the personal side, I'm a day-dreamer, coffee addict and food lover. I always seek new challenges to expand my skills and continue to develop both knowledge and potential, in addition to experience cultural differences and gain new friends.</p>
 				</div>
@@ -52,8 +52,30 @@
 							<div class="job-description">
 								<ul>
 									<li>Development and continuous maintenance of Billie, the chatbot, with aim of providing precise automated responses to customers in milliseconds. This primarily involved backend integration with own services that detects intent or ask to rephrase, efficiently routing questions through the appropriate content flows and consume other services in the landscape for realtime data. In addition to migration of old content flows to new content tooling.</li>
-									<li>In my sub-role as Scrum Master, I was responsible for ensuring that the scrum team adheres to the agreed work processes and procedures in addition to maintaining harmonious and disruption-free environment, as well as the onboarding and leadership of new engineers.</li>
+									<li>In my sub-role as Scrum Master, I held a leadership role in guaranteeing the scrum team's compliance with established work processes and procedures. My responsibilities extended to fostering a cohesive and disruption-free work environment, as well as taking charge of the onboarding and leadership development of new engineers.</li>
 								</ul>
+							</div>
+						</div>
+						<div class="col-3 float-start">
+							<div class="duration"> Technologies </div>
+						</div>
+						<div class="col-9 float-start">
+							<div class="job-description">
+								<div class="technology">Java</div>
+								<div class="technology">Kotlin</div>
+								<div class="technology">Spring</div>
+								<div class="technology">Junit</div>
+								<div class="technology">Groovy</div>
+								<div class="technology">Cucumber</div>
+								<div class="technology">Postgresql</div>
+								<div class="technology">GCP</div>
+								<div class="technology">Kubernetes</div>
+								<div class="technology">Docker</div>
+								<div class="technology">Bigquery</div>
+								<div class="technology">Gitlab</div>
+								<div class="technology">Machine learning</div>
+								<div class="technology">Tensorflow</div>
+								<div class="technology">Mac</div>
 							</div>
 						</div>
 					</div>
@@ -72,6 +94,20 @@
 								</ul>
 							</div>
 						</div>
+						<div class="col-3 float-start">
+							<div class="duration"> Technologies </div>
+						</div>
+						<div class="col-9 float-start">
+							<div class="job-description">
+								<div class="technology">Java</div>
+								<div class="technology">Javascript</div>
+								<div class="technology">Bash</div>
+								<div class="technology">Cortex</div>
+								<div class="technology">Process automation</div>
+								<div class="technology">Windows</div>
+								<div class="technology">Linux</div>
+							</div>
+						</div>
 					</div>
 					<hr />
 					<div class="job clearfix">
@@ -86,6 +122,21 @@
 									<li>Involved in Java/Java EE application development, building high-performing, scalable, and enterprise-grade applications.</li>
 									<li>Used to analyze user requirements, envisioning system features and functionality, designs, develops user interfaces to internet/intranet applications. Also Integrates applications by designing database architecture and server scripting.</li>
 								</ul>
+							</div>
+						</div>
+						<div class="col-3 float-start">
+							<div class="duration"> Technologies </div>
+						</div>
+						<div class="col-9 float-start">
+							<div class="job-description">
+								<div class="technology">Java 7</div>
+								<div class="technology">JSP</div>
+								<div class="technology">Junit</div>
+								<div class="technology">Oracle DB</div>
+								<div class="technology">Angular</div>
+								<div class="technology">FTP</div>
+								<div class="technology">Jboss</div>
+								<div class="technology">Windows</div>
 							</div>
 						</div>
 					</div>
@@ -104,6 +155,21 @@
 								</ul>
 							</div>
 						</div>
+						<div class="col-3 float-start">
+							<div class="duration"> Technologies </div>
+						</div>
+						<div class="col-9 float-start">
+							<div class="job-description">
+								<div class="technology">Java EE 6</div>
+								<div class="technology">JSP</div>
+								<div class="technology">EJP</div>
+								<div class="technology">Junit</div>
+								<div class="technology">Postgresql</div>
+								<div class="technology">Angular</div>
+								<div class="technology">Gitlab</div>
+								<div class="technology">Linux</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -117,8 +183,8 @@
 						<div class="skill" data-percent="0.98">REST APIs & SOA</div>
 						<div class="skill" data-percent="0.98">Testing & Debugging</div>
 						<div class="skill" data-percent="0.95">Databases</div>
-						<div class="skill" data-percent="0.90">Cloud</div>
-						<div class="skill" data-percent="0.85">Agile methodologies</div>
+						<div class="skill" data-percent="0.90">Kubernetes, Docker, GCP</div>
+						<div class="skill" data-percent="0.85">Certified Scrum Master</div>
 					</div>
 				</div>
                 <hr />
