--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 					<div class="skills">
 						<div class="skill" data-percent="0.99">Java, Kotlin, Python</div>
 						<div class="skill" data-percent="0.99">Backend & Web Development</div>
-						<div class="skill" data-percent="0.98">REST APIs & SOA</div>
+						<div class="skill" data-percent="0.98">Microservices & SOA</div>
 						<div class="skill" data-percent="0.98">Testing & Debugging</div>
 						<div class="skill" data-percent="0.95">Databases</div>
 						<div class="skill" data-percent="0.90">Kubernetes, Docker, GCP</div>
